tests/src/frontend/syntax/invalid/const_pattern3.sk
const MyNan: Float = 0.0 / 0.0;

fun shouldFail(x: Float): String {
  x match {
  | MyNan -> "You shouldn't be seeing this\n"
  | _ -> "Pass\n"
  }
}
